--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,7 @@
+body {
+  background-color: black;
+  margin: 10px 20px !important;
+}
 .app_container {
   display: flex;
   flex-direction: row;
@@ -41,8 +45,9 @@
 }
 
 .button1 {
+  margin-left: 18px !important;
   background: linear-gradient(to bottom, #000000 0%, #363232 100%);
-  width: 100%;
+  width: 90%;
   height: 75px;
   border: none;
   border-radius: 4px;
@@ -54,8 +59,9 @@
 }
 
 .button2 {
+  margin-left: 18px !important;
   background: linear-gradient(to bottom, #000000 0%, #363232 100%);
-  width: 100%;
+  width: 90%;
   height: 75px;
   border: none;
   border-radius: 4px;
@@ -67,9 +73,11 @@
 }
 
 .button3 {
+  margin-left: 18px !important;
   background: linear-gradient(to bottom, #000000 0%, #363232 100%);
+  width: 90%;
   opacity: 0.95;
-  width: 100%;
+
   height: 75px;
   border: none;
   border-radius: 4px;
@@ -81,8 +89,9 @@
 }
 
 .button4 {
+  margin-left: 18px !important;
   background: linear-gradient(to bottom, #000000 0%, #363232 100%);
-  width: 100%;
+  width: 90%;
   height: 75px;
   border: none;
   border-radius: 4px;
@@ -94,8 +103,9 @@
 }
 
 .button5 {
+  margin-left: 18px !important;
   background: linear-gradient(to bottom, #000000 0%, #363232 100%);
-  width: 100%;
+  width: 90%;
   height: 75px;
   border: none;
   border-radius: 4px;
