--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 body {
   /* background-color: #e5ce97; */
   background-color: black;
-  margin: 10px 20px !important;
+  /* margin: 10px 20px !important; */
 }
 
 .backgroundTogglerIn {
@@ -36,7 +36,7 @@ body {
 }
 .coffee_container {
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   flex-wrap: wrap;
   background-color: #f1e5cf;
   border-radius: 3px;
